Ajout de la barre de menu supérieure avec horloge en temps réel et ajustement du layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<link rel="stylesheet" href="/style.css">
 </head>
 <body>
+	<!-- Barre de menu supérieure -->
+	<div id="menu-bar">
+		<div class="menu-left">
+			<span>Portfolio</span>
+		</div>
+		<div class="menu-right">
+			<span id="clock"></span>
+		</div>
+	</div>
+	<!-- Zone principale du bureau -->
 	<div id="desktop">
 		<!-- Dock -->
 		<div id="dock">
@@ -29,6 +39,6 @@
 		</div>
 	</div>
 
-	<script src="assets/js/script.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
