--- a/index.html
+++ b/index.html
@@ -18,23 +18,48 @@
 	</div>
 	<!-- Zone principale du bureau -->
 	<div id="desktop">
+		<!-- Fenêtre Mail (formulaire de contact) -->
+		<div id="mail-window" class="window hidden">
+			<div class="window-header">
+				<span>Mail - Contact</span>
+				<button id="close-mail">✕</button>
+			</div>
+			<div class="window-content">
+				<form id="contact-form">
+					<label for="to">À :</label>
+					<input type="email" id="to" name="to" value="votre.email@example.com" readonly>
+		
+					<label for="subject">Sujet :</label>
+					<input type="text" id="subject" name="subject" placeholder="Sujet...">
+		
+					<label for="message">Message :</label>
+					<textarea id="message" name="message" placeholder="Écrivez votre message ici..."></textarea>
+		
+					<button type="submit">Envoyer</button>
+				</form>
+			</div>
+		</div>
 		<!-- Dock -->
 		<div id="dock">
 			<div class="dock-icon" data-app="mail">
 				<img src="img/mail.png" alt="Mail">
 				<span>Mail</span>
+				<div class="indicator"></div>
 			</div>
 			<div class="dock-icon" data-app="contact">
 				<img src="img/contact.png" alt="Contact">
 				<span>Contact</span>
+				<div class="indicator"></div>
 			</div>
 			<div class="dock-icon" data-app="about">
 				<img src="img/about.png" alt="À propos">
 				<span>À propos</span>
+				<div class="indicator"></div>
 			</div>
 			<div class="dock-icon" data-app="projects">
 				<img src="img/projects.png" alt="Projets">
 				<span>Projets</span>
+				<div class="indicator"></div>
 			</div>
 		</div>
 	</div>
