Mise à jour dynamique du titre dans la barre de menu selon l'application ouverte

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Barre de menu supérieure -->
 	<div id="menu-bar">
 		<div class="menu-left">
-			<span>Portfolio</span>
+			<span id="menu-title">Portfolio</span>
 		</div>
 		<div class="menu-right">
 			<span id="clock"></span>
