Refonte de la fenêtre Mail avec style macOS : ajout des boutons fermer/envoyer, champs obligatoires et gestion JS

--- a/index.html
+++ b/index.html
@@ -21,21 +21,26 @@
 		<!-- Fenêtre Mail (formulaire de contact) -->
 		<div id="mail-window" class="window hidden">
 			<div class="window-header">
-				<span>Mail - Contact</span>
-				<button id="close-mail">✕</button>
+				<div class="window-controls">
+					<button class="close" id="close-mail"></button>
+					<button class="minimize"></button>
+					<button class="maximize"></button>
+				</div>
+				<button id="send-mail" class="send-button">Envoyer</button>
 			</div>
 			<div class="window-content">
 				<form id="contact-form">
 					<label for="to">À :</label>
-					<input type="email" id="to" name="to" value="votre.email@example.com" readonly>
+					<input type="email" id="to" name="to" value="marionalix@icloud.com" readonly>
 		
-					<label for="subject">Sujet :</label>
-					<input type="text" id="subject" name="subject" placeholder="Sujet...">
+					<label for="from">De :</label>
+					<input type="email" id="from" name="from" placeholder="Votre adresse email" required>
+		
+					<label for="subject">Objet :</label>
+					<input type="text" id="subject" name="subject" placeholder="Sujet..." required>
 		
 					<label for="message">Message :</label>
-					<textarea id="message" name="message" placeholder="Écrivez votre message ici..."></textarea>
-		
-					<button type="submit">Envoyer</button>
+					<textarea id="message" name="message" placeholder="Écrivez votre message ici..." required></textarea>
 				</form>
 			</div>
 		</div>
