Gestion du redimensionnement et du déplacement des fenêtres. Remise au propre du code avant commit.

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 					<button class="maximize" id="maximize-safari"></button>
 				</div>
 				<div class="safari-address-bar">
-					<input type="text" id="safari-url" value="https://www.apple.com/fr/embed/" readonly />
+					<input type="text" id="safari-url" value="https://fr.wikipedia.org/wiki/Accueil" readonly />
 				</div>
 			</div>
 			<div class="window-content">
-				<iframe id="safari-iframe" src="https://www.apple.com/fr/" frameborder="0"></iframe>
+				<iframe id="safari-iframe" src="https://fr.wikipedia.org/wiki/Accueil" frameborder="0"></iframe>
 			</div>
 		</div>
 		
