--- a/index.html
+++ b/index.html
@@ -69,6 +69,26 @@
 			</div>
 		</div>
 		
+		<!-- Fenêtre Pages -->
+		<div class="window hidden" id="pages-window">
+		  <div class="window-header">
+			<div class="window-controls">
+			  <button id="close-pages" class="close"></button>
+			  <button id="minimize-pages" class="minimize"></button>
+			  <button id="maximize-pages" class="maximize"></button>
+			</div>
+			<div class="zoom-controls">
+				<button id="zoom-out">-</button>
+				<button id="zoom-in">+</button>
+			</div>
+		  </div>
+		  <div class="window-content" id="pages-window-content">
+			<div id="pdf-container" style="width:100%; height:100%; overflow:auto;">
+			  <canvas id="pdf-render"></canvas>
+			</div>
+		  </div>
+		</div>
+		
 		<!-- Dock -->
 		<div id="dock">
 			<div id="mail-icon" class="dock-icon" data-app="mail">
@@ -81,9 +101,9 @@
 				<span>Safari</span>
 				<div class="indicator"></div>
 			</div>
-			<div class="dock-icon" data-app="about">
-				<img src="img/about.png" alt="À propos">
-				<span>À propos</span>
+			<div class="dock-icon" data-app="pages">
+				<img src="img/pages.png" alt="Pages">
+				<span>Pages</span>
 				<div class="indicator"></div>
 			</div>
 			<div class="dock-icon" data-app="projects">
@@ -95,5 +115,8 @@
 	</div>
 
 	<script src="script.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+	<script src="pdf.js"></script>
+
 </body>
 </html>
