--- a/index.html
+++ b/index.html
@@ -83,9 +83,10 @@
 			</div>
 		  </div>
 		  <div class="window-content" id="pages-window-content">
-			<div id="pdf-container" style="width:100%; height:100%; overflow:auto;">
+			<div id="pdf-container">
 			  <canvas id="pdf-render"></canvas>
 			</div>
+			<div id="pdf-footer"></div>
 		  </div>
 		</div>
 		
@@ -121,6 +122,11 @@
 			<div class="dock-icon" data-app="maps">
 				<img src="img/maps.png" alt="Maps">
 				<span>Maps</span>
+				<div class="indicator"></div>
+			</div>
+			<div class="dock-icon" data-app="linkedin">
+				<img id="linkedin-icon" src="img/linkedin.png" alt="LinkedIn">
+				<span>LinkedIn</span>
 				<div class="indicator"></div>
 			</div>
 			<div class="dock-icon" data-app="pages">
