Modification du contenu de Safari pour donner des stats liées à mon GitHub. Mise à jour du CV.

--- a/index.html
+++ b/index.html
@@ -61,11 +61,16 @@
 					<button class="maximize" id="maximize-safari"></button>
 				</div>
 				<div class="safari-address-bar">
-					<input type="text" id="safari-url" value="https://fr.wikipedia.org/wiki/Accueil" readonly />
+					<input type="text" id="safari-url" value="https://github.com/marionalix" readonly />
 				</div>
 			</div>
 			<div class="window-content">
-				<iframe id="safari-iframe" src="https://fr.wikipedia.org/wiki/Accueil" frameborder="0"></iframe>
+				<div class="github-preview">
+					<img src="https://github-readme-stats.vercel.app/api?username=marionalix&show_icons=true&theme=light&include_all_commits=true&count_private=true" alt="Statistiques GitHub">
+					<img src="https://github-readme-stats.vercel.app/api/top-langs/?username=marionalix&layout=compact&langs_count=8&theme=light" alt="Langages les plus utilisés">
+					
+					<a href="https://github.com/marionalix" target="_blank" class="github-button">Voir sur GitHub</a>
+				</div>
 			</div>
 		</div>
 		
@@ -101,7 +106,7 @@
 		  </div>
 		  <div class="window-content">
 			<iframe
-			  src="https://www.google.com/maps?q=-20.348404,57.552152&z=15&output=embed"
+			  src="https://www.google.com/maps?q=La+Réunion&z=10&output=embed"
 			  allowfullscreen
 			></iframe>
 		  </div>
@@ -146,9 +151,9 @@
 			</div>
 			<div id="note-mentions" class="notes-content hidden">
 				<h2>Mentions Légales</h2>
-				<p><strong>Éditeur du site: </strong>Alix Marion</p>
-				<p><strong>Contact: </strong>marionalix@icloud.com</p>
-				<p><strong>Hébergeur: </strong>L'hébergement de ce site est assuré par la société HOSTINGER INTERNATIONAL LTD, dont le siège social se situe 61 Lordou Vironos Street, 6023 Larnaca, Chypre, joignable par le moyen suivant : https://www.hostinger.fr/contact.</p><br />
+				<p><strong>Éditeur du site: </strong>Alix Marion<br>
+				<strong>Contact: </strong>marionalix@icloud.com<br>
+				<strong>Hébergeur: </strong>L'hébergement de ce site est assuré par la société HOSTINGER INTERNATIONAL LTD, dont le siège social se situe 61 Lordou Vironos Street, 6023 Larnaca, Chypre, joignable par le moyen suivant : https://www.hostinger.fr/contact.<br>
 				<p>Ce site est un portfolio personnel et ne collecte aucune donnée utilisateur.</p>
 			</div>
 		  </div>
